plans: site 6 measured -- decide :bed-swap 12.58% -> 0.35%
`measurements.md` gains a dated site-6 section. The wall: `a7500-persons`
102.10 s -> 87.95 s (-13.9%), `a2500-nopersons` 26.45 s -> 24.11 s
(-8.8%), check unmoved at both. At the top of the decade one timed
`a22500-nopersons` generate: 250.62 s -> 149.41 s, and 1,472.56 s ->
149.41 s across the whole six-site program -- 9.86x -- over a log
byte-identical to the committed `7d105743...78e0a` at 174,866,696 bytes.

THE PROFILE IS A MATCHED PAIR, recorded by site 5's own method: the
before half from a worktree at `0b7976db`, same driver, same cell.
`decide :bed-swap` 12.58% -> 0.35%; the whole `decide` dispatch 29.18% ->
18.73%. The two frames that vanish outright are the deleted scan's own
`remove` and `filter` lambdas, at 3.98% and 2.44% of the before
recording. Allocation from the same recordings: `decide :bed-swap`
6.98 GB (12.76%, 3,176 samples) -> 0.003 GB (0.01%, 2), phase total
54.7 -> 47.0 GB.

SITE 6 ADDED NO CONCERN AND NO COST. `:eligible-index` is site 5's row
and reads 0.22% -> 0.11% of the phase on code neither session touched --
sampling spread, recorded as such and not as a saving. ADR-0180's five
in-fold indexes together now cost 1.33% of this cell's generate phase.

THE ATTRIBUTION HAD TO BE RESOLVED TWICE, which site 5's single offset
did not have to be: deleting two anonymous fns from `decide :bed-swap`
shifts every later gensym ordinal in the file by 13 (`:merge` is
`eval7081` before and `eval7068` after), so the before half was resolved
against the worktree's own source. Both recordings still land on +3001.

PEAK RSS ROSE at both generate cells (2,175 -> 2,340 MB; 886 -> 972 MB)
where site 5's fell, over a run that allocates 14.1% less -- recorded
rather than explained away. At the top of the decade, where it is
measured across a whole run, it FELL: 3,575 -> 3,196 MB.

MEASURED HERE FOR SITE 7, so that session need not: the in-run
`check-all` is 34.71% of generate at this cell, and a stan